apps/canfar/base/skaha/custom-skaha-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skaha-ingress
  namespace: skaha-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: canfar.ral.uksrc.org
    http:
      paths:
      - path: /skaha
        pathType: Prefix
        backend:
          service:
            name: skaha-tomcat-svc
            port:
              number: 8080
